# ytdown

./: .cursor.sh  .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  SECURITY_NOTES.md  TODO.md  api_key_draft.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_config.py  test_json_simple.py  test_security.py  youtube_downloader_telegram.py
.github/workflows/: tests.yml
bot/: __init__.py  archive.py  cleanup.py  cli.py  config.py  downloader.py  downloader_core.py  downloader_media.py  downloader_metadata.py  downloader_playlist.py  downloader_subtitles.py  downloader_validation.py  jobs.py  mtproto.py  repositories.py  runtime.py  security.py  security_authorization.py  security_limits.py  security_pin.py  security_policy.py  security_throttling.py  session_context.py  session_store.py  spotify.py  telegram_callbacks.py  telegram_commands.py  transcription.py  transcription_chunking.py  transcription_limits.py  transcription_pipeline.py  transcription_providers.py
bot/handlers/: __init__.py  callback_parsing.py  command_access.py  common_ui.py  download_callbacks.py  inbound_audio.py  inbound_media.py  inbound_video.py  media_extras_callbacks.py  playlist_callbacks.py  spotify_callbacks.py  time_range.py  time_range_callbacks.py  transcription_callbacks.py
bot/services/: __init__.py  archive_service.py  auth_service.py  download_service.py  (+3 more)
tests/: __init__.py  conftest.py  telegram_callbacks_support.py  telegram_commands_support.py  test_archive.py  test_archive_service.py  test_auth_service.py  test_callback_common.py  test_callback_download_handlers.py  test_callback_transcription_handlers.py  test_cleanup.py  test_cli.py  test_command_access_handlers.py  test_concurrency.py  test_config_unit.py  test_download_history.py  test_download_service.py  test_downloader.py  test_downloader_media.py  test_inbound_media_handlers.py  test_integration.py  test_jobs.py  test_json_persistence.py  test_json_simple.py  test_main.py  test_mtproto.py  test_platforms.py  test_playlist.py  test_playlist_service.py  test_poetry_config.py  test_repositories.py  test_runtime.py  test_security.py  test_security_audit.py  test_security_authorization.py  test_security_pin_module.py  test_security_policy.py  test_security_standalone.py  test_security_throttling.py  test_security_unit.py  (+14 more)
(+6 files in other folders)
